--- a/index.html
+++ b/index.html
@@ -2115,12 +2115,14 @@
             <div class="experience-row flex gap-8 w-full justify-between mb-8">
                 <div class="experience-card card-1 w-[890px] h-[375px] p-8">
                     <div class="card-content">
+                      <img src="./images/experinces1.webp" alt="">
                         <h3 class="text-2xl font-bold mb-2">Project Title 1</h3>
                         <p class="text-lg">Description of the project and achievements</p>
                     </div>
                 </div>
                 <div class="experience-card card-2 w-[618px] h-[375px] p-8">
                     <div class="card-content">
+                      <img src="./images/experinces2.webp" alt="">
                         <h3 class="text-2xl font-bold mb-2">Project Title 2</h3>
                         <p class="text-lg">Description of the project and achievements</p>
                     </div>
@@ -2131,12 +2133,14 @@
             <div class="experience-row flex gap-8 w-full justify-between">
                 <div class="experience-card card-3 w-[618px] h-[375px] p-8">
                     <div class="card-content">
-                        <h3 class="text-2xl font-bold mb-2">Project Title 3</h3>
-                        <p class="text-lg">Description of the project and achievements</p>
+                        
+                        <img src="./images/experinces3.webp" alt="">
+                        
                     </div>
                 </div>
                 <div class="experience-card card-4 w-[890px] h-[375px] p-8">
                     <div class="card-content">
+                      <img src="./images/experinces4.webp" alt="">
                         <h3 class="text-2xl font-bold mb-2">Project Title 4</h3>
                         <p class="text-lg">Description of the project and achievements</p>
                     </div>
@@ -2219,7 +2223,7 @@
                 <!-- Card 1 -->
                 <div class="h-full">
                     <div class="success-box">
-                        <img src="https://via.placeholder.com/800x500?text=Success+Story+1" alt="Success 1">
+                        <img src="./images/experinces1.webp" alt="Success 1">
                         <div class="success-content">
                             <h3 class="text-2xl font-bold mb-2">E-Commerce Transformation</h3>
                             <p>Helped a retail giant increase online sales by 240%</p>
@@ -2230,7 +2234,7 @@
                 <!-- Card 2 -->
                 <div class="h-full">
                     <div class="success-box">
-                        <img src="https://via.placeholder.com/800x500?text=Success+Story+2" alt="Success 2">
+                        <img src="./images/experinces2.webp" alt="Success 2">
                         <div class="success-content">
                             <h3 class="text-2xl font-bold mb-2">Banking System Upgrade</h3>
                             <p>Modernized core banking platform for 5M+ customers</p>
@@ -2244,7 +2248,7 @@
                 <!-- Card 3 -->
                 <div class="h-full">
                     <div class="success-box">
-                        <img src="https://via.placeholder.com/800x500?text=Success+Story+3" alt="Fintech">
+                        <img src="./images/experinces3.webp" alt="Fintech">
                         <div class="success-content">
                             <h3 class="text-2xl font-bold mb-2">Fintech Innovation</h3>
                             <p>Built AI-powered investment platform for startup</p>
@@ -2255,7 +2259,7 @@
                 <!-- Card 4 -->
                 <div class="h-full">
                     <div class="success-box">
-                        <img src="https://via.placeholder.com/800x500?text=Success+Story+4" alt="Contractor Services">
+                        <img src="./images/experinces4.webp" alt="Contractor Services">
                         <div class="success-content">
                             <h3 class="text-2xl font-bold mb-2">Contractor Services</h3>
                             <p>Streamlined operations with custom workflow system</p>
