--- a/index.html
+++ b/index.html
@@ -818,7 +818,7 @@
 
 
 
-<!-- ======================================================================== -->
+<!-- ======================================================================== -->                    
 
 <section class="social-impact-section">
   <div class="container mx-auto px-4 sm:px-6 text-center">
@@ -885,7 +885,7 @@
 
 <div class="join-section">
     <!-- Desktop Heading -->
-    <h2 class="join-title">Join Our Team: Work with Our Industry-Leading Software Experts</h2>
+    <h2 class="join-title">Join Our Team: Work with Our Industry-Leading Software <br> Experts</h2>
     
     <!-- Mobile Heading -->
     <h2 class="mobile-join-title">Join our team: Website Design and Development Company Seeks Exceptional Talent</h2>
@@ -931,7 +931,7 @@
     <!-- FAQ Section -->                                    
     <section class="faq-section">
         <div>
-            <h2 class="faq-title">Comprehensive FAQ About Choosing the Right IT Consulting Company</h2>
+            <h2 class="faq-title">Comprehensive FAQ About Choosing the Right <br> IT Consulting Company</h2>
         </div>
 
         <div class="faq-content">
